# treesFromPC

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp  octree.cpp  octree.h  rangeimage.cpp  rangeimage.h
data/: MixedConifer.las  MixedConifer_out.laz
include/: helpers.h
paper/: mybibfile.bib  paper.Rmd  paper.tex
treesFromPC/: CMakeLists.txt
